unpackaged/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>Custom Contracts object used for tracking MyCase Inc entity customer contracts</description>
    <label>Subscription Contract</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>