unpackaged/main/default/objects/Contract__c/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Account__c)</formula>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>