unpackaged/main/default/objects/Contract__c/fields/Annual_Total_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_Roll_Up__c</fullName>
    <label>Annual Total</label>
    <summarizedField>Contract_SKU__c.Annual_Total__c</summarizedField>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>