unpackaged/main/default/objects/Contract__c/fields/Azure_Count__c.field-meta.xml
<CustomField>
    <fullName>Azure_Count__c</fullName>
    <label>Azure Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>