unpackaged/main/default/objects/Contract__c/fields/Billing_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Billing Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>