unpackaged/main/default/objects/Contract__c/fields/Billing_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_ID__c</fullName>
    <label>Billing System ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>