unpackaged/main/default/objects/Contract__c/fields/CASEpeer_ID__c.field-meta.xml
<CustomField>
    <fullName>CASEpeer_ID__c</fullName>
    <externalId>true</externalId>
    <label>CASEpeer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>