unpackaged/main/default/objects/Contract__c/fields/Comped__c.field-meta.xml
<CustomField>
    <fullName>Comped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WILL WANT TO ADD A START AND END DATE FOR COMPED IN FUTURE INSTANCE WHERE NO DATES INDICATES PERPETUAL</description>
    <inlineHelpText>This Checkbox indicates that it&#39;s a 100% free account</inlineHelpText>
    <label>Comped</label>
    <type>Checkbox</type>
</CustomField>