unpackaged/main/default/objects/Contract__c/fields/Contract_SKU_Count__c.field-meta.xml
<CustomField>
    <fullName>Contract_SKU_Count__c</fullName>
    <label>Contract SKU Count</label>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>