unpackaged/main/default/objects/Contract__c/fields/Contracted_Users__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Users__c</fullName>
    <label>Contracted User</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>