unpackaged/main/default/objects/Contract__c/fields/Contracted_Users_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Users_Roll_up__c</fullName>
    <description>Rollup of Sub Contract SKU  records. Used to audit automated process.</description>
    <label>Contracted Users</label>
    <summarizedField>Contract_SKU__c.User_Count__c</summarizedField>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>