unpackaged/main/default/objects/Contract__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>The day when the contract became effective / Date First Opportunity Closed Won</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>