unpackaged/main/default/objects/Contract__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <description>Firm ID from Product Environment associated to Subscription Contract</description>
    <formula>Product_Environment__r.Firm_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Firm ID from Product Environment associated to Subscription Contract</inlineHelpText>
    <label>Firm ID</label>
    <type>Text</type>
</CustomField>