unpackaged/main/default/objects/Contract__c/fields/Historical_Discount__c.field-meta.xml
<CustomField>
    <fullName>Historical_Discount__c</fullName>
    <label>zzHistorical Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>