unpackaged/main/default/objects/Contract__c/fields/Legacy_Affinipay_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Affinipay_Promotion__c</fullName>
    <inlineHelpText>Displays the Promotion from the imported Affinipay contract data</inlineHelpText>
    <label>Legacy Affinipay Promotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>