unpackaged/main/default/objects/Contract__c/fields/Missing_PE__c.field-meta.xml
<CustomField>
    <fullName>Missing_PE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing PE</label>
    <type>Checkbox</type>
</CustomField>