unpackaged/main/default/objects/Contract__c/fields/Missing_Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Missing_Product_Environment__c</fullName>
    <description>If PE is empty, this field will be checked, if it is populated it will be unchecked.</description>
    <formula>IF(ISNULL(Product_Environment__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Product Environment</label>
    <type>Checkbox</type>
</CustomField>