unpackaged/main/default/objects/Contract__c/fields/Monthly_Total__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Total__c</fullName>
    <label>zzMonthly Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>