unpackaged/main/default/objects/Contract__c/fields/Monthly_Total_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Total_Roll_Up__c</fullName>
    <label>Monthly Total</label>
    <summarizedField>Contract_SKU__c.Monthly_Total__c</summarizedField>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>