unpackaged/main/default/objects/Contract__c/fields/Monthly_User_Total__c.field-meta.xml
<CustomField>
    <fullName>Monthly_User_Total__c</fullName>
    <label>zzMonthly User Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>