unpackaged/main/default/objects/Contract__c/fields/Monthly_User_Total_For__c.field-meta.xml
<CustomField>
    <fullName>Monthly_User_Total_For__c</fullName>
    <formula>Monthly_Total_Roll_Up__c / Contracted_Users_Roll_up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly User Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>