unpackaged/main/default/objects/Contract__c/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <externalId>true</externalId>
    <label>MyCase ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>