unpackaged/main/default/objects/Contract__c/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <formula>IF (Text(Term__c) = &#39;Monthly&#39;, ADDMONTHS(Effective_Date__c, Renew_Months_Monthly__c ), ADDMONTHS(Effective_Date__c,  Renew_Months_Annual__c  ) )</formula>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>