unpackaged/main/default/objects/Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This lookup represents the link to the opportunity that initiated the subscription contract.  This value should not change over the course of the life of the subscription contract.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Subscription Contracts</relationshipLabel>
    <relationshipName>Subscription_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>