unpackaged/main/default/objects/Contract__c/fields/Opportunity_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Opportunity__c)</formula>
    <label>Opportunity Case Safe ID</label>
    <type>Text</type>
</CustomField>