unpackaged/main/default/objects/Contract__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the name of the owner of the initiating opportunity.</inlineHelpText>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>