unpackaged/main/default/objects/Contract__c/fields/Opportunity_Owner_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Case_Safe_ID__c</fullName>
    <formula>CASESAFEID(Opportunity__r.OwnerId)</formula>
    <label>Opportunity Owner Case Safe ID</label>
    <type>Text</type>
</CustomField>