unpackaged/main/default/objects/Contract__c/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <formula>Opportunity__r.Owner_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the name of the opportunity owner role for the initiating opportunity</inlineHelpText>
    <label>Opportunity Owner Role</label>
    <type>Text</type>
</CustomField>