unpackaged/main/default/objects/Contract__c/fields/Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Subscription Contracts</relationshipLabel>
    <relationshipName>Subscription_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>