unpackaged/main/default/objects/Contract__c/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <label>Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>