unpackaged/main/default/objects/Contract__c/fields/Qualifying_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Name__c</fullName>
    <formula>Opportunity__r.Qualifying_Rep__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Qualifying_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the name of the qualifying rep from the initiating opportunity</inlineHelpText>
    <label>Qualifying Rep Name</label>
    <type>Text</type>
</CustomField>