unpackaged/main/default/objects/Contract__c/fields/Qualifying_Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Role__c</fullName>
    <formula>Opportunity__r.Qualifying_Rep_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the name of the qualifying rep role from the initiating opportunity</inlineHelpText>
    <label>Qualifying Rep Role</label>
    <type>Text</type>
</CustomField>