unpackaged/main/default/objects/Contract__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the record type name for use in automation.</inlineHelpText>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>