unpackaged/main/default/objects/Contract__c/fields/Renew_Months_Annual__c.field-meta.xml
<CustomField>
    <fullName>Renew_Months_Annual__c</fullName>
    <formula>IF (Year (Effective_Date__c) &lt; Year(TODAY())

   /*PAST YEAR - PAST MONTH */
   , IF(Month (Effective_Date__c) &lt; Month(TODAY())
       , ((Year(TODAY())- Year(Effective_Date__c))*12)+12
   
       /*PAST YEAR - LATER MONTH */    
       , IF (Month (Effective_Date__c) &gt; Month(TODAY())
       , (Year(TODAY())- Year(Effective_Date__c))*12
   
           /*PAST YEAR - SAME MONTH / CHECK THE DAY OF THE MONTH */
           , IF (Day(Effective_Date__c) &lt; Day(TODAY())
   
             , ((Year(TODAY())- Year(Effective_Date__c))*12)+12
             , (Year(TODAY())- Year(Effective_Date__c))*12
             
            )
            )
            )
             
   /*SAME YEAR - PAST MONTH */
   , IF(Month (Effective_Date__c) &lt; Month(TODAY())
       , ((Year(TODAY())- Year(Effective_Date__c))*12)+12
   
       /*SAME YEAR - LATER MONTH*/    
       , IF (Month (Effective_Date__c) &gt; Month(TODAY())
       , (Year(TODAY())- Year(Effective_Date__c))*12
   
           /*SAME YEAR - SAME MONTH / CHECK THE DAY OF THE MONTH*/
           , IF (Day(Effective_Date__c) &lt;= Day(TODAY())
   
             , ((Year(TODAY())- Year(Effective_Date__c))*12)+12
             , (Year(TODAY())- Year(Effective_Date__c))*12

)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renew Months (Annual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>