unpackaged/main/default/objects/Contract__c/fields/Renew_Months_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Renew_Months_Monthly__c</fullName>
    <formula>IF (Year (Effective_Date__c) &lt; Year(TODAY())

   /*PAST YEAR - PAST MONTH */
   , IF(Month (Effective_Date__c) &lt; Month(TODAY())
       , Ceiling((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)
   
       /*PAST YEAR - LATER MONTH */    
       , IF (Month (Effective_Date__c) &gt; Month(TODAY())
       , Ceiling((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)
   
           /*PAST YEAR - SAME MONTH / CHECK THE DAY OF THE MONTH */
           , IF (Day(Effective_Date__c) &lt; Day(TODAY())
   
             , Ceiling(((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)+1)
             , Ceiling((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)
             
            )
            )
            )
             
   /*SAME YEAR - PAST MONTH */
   , IF(Month (Effective_Date__c) &lt; Month(TODAY())
       , Ceiling((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)
   
       /*SAME YEAR - LATER MONTH*/    
       , IF (Month (Effective_Date__c) &gt; Month(TODAY())
       , Ceiling((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)
   
           /*SAME YEAR - SAME MONTH / CHECK THE DAY OF THE MONTH*/
           , IF (Day(Effective_Date__c) &lt;= Day(TODAY())
   
             , Ceiling(((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)+1) 
             , Ceiling((MONTH( Effective_Date__c ) + (12*(YEAR(Effective_Date__c )-YEAR(TODAY()))) - MONTH(TODAY()))*-1)
)
)
)
)</formula>
    <label>Renew Months (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>