unpackaged/main/default/objects/Contract__c/fields/Rep_Discount_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Rep_Discount_Per_User__c</fullName>
    <formula>Rep_Discount_Total__c / Contracted_Users__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rep Discount Total / Contracted User</inlineHelpText>
    <label>Rep Discount Per User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>