unpackaged/main/default/objects/Contract__c/fields/Rep_Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Rep_Discount_Total__c</fullName>
    <label>zzRep Discount Total</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>