unpackaged/main/default/objects/Contract__c/fields/Rep_Discount_Total_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Rep_Discount_Total_Roll_Up__c</fullName>
    <label>Rep Discount Total</label>
    <summarizedField>Contract_SKU__c.Rep_Discount__c</summarizedField>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>