unpackaged/main/default/objects/Contract__c/fields/Stripe_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>