unpackaged/main/default/objects/Contract__c/fields/Subscription_Contract_ID_CI__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contract_ID_CI__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record ID wrapped in CASESAFEID function</inlineHelpText>
    <label>Subscription Contract ID (CI)</label>
    <type>Text</type>
</CustomField>