unpackaged/main/default/objects/Contract__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <inlineHelpText>Reflects the termination date of the contract. May be set in the future and will drive the status field to Inactive once the date is reached</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>