unpackaged/main/default/objects/Contract__c/fields/Tier_2_Total__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Total__c</fullName>
    <label>Tier 2 Total</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>