unpackaged/main/default/objects/Contract__c/fields/Tier_2_Users__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Users__c</fullName>
    <label>Tier 2 Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>