unpackaged/main/default/objects/Contract__c/fields/Tier_Totals__c.field-meta.xml
<CustomField>
    <fullName>Tier_Totals__c</fullName>
    <label>Tier Totals</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>