unpackaged/main/default/objects/Contract__c/fields/Total_User_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_User_Count__c</fullName>
    <inlineHelpText>As rolled up from the subscription Contract SKU record.</inlineHelpText>
    <label>Total User Count</label>
    <summarizedField>Contract_SKU__c.User_Count_Rollup__c</summarizedField>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>