unpackaged/main/default/objects/Contract__c/fields/Transactions_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Transactions_Roll_Up__c</fullName>
    <label>Transactions</label>
    <summaryForeignKey>Contract_SKU__c.Subscription_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>