unpackaged/main/default/objects/Contract__c/fields/Woodpecker_ID__c.field-meta.xml
<CustomField>
    <fullName>Woodpecker_ID__c</fullName>
    <externalId>true</externalId>
    <label>Woodpecker ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>