unpackaged/main/default/objects/Contract__c/recordTypes/Affinipay.recordType-meta.xml
<RecordType>
    <fullName>Affinipay</fullName>
    <active>true</active>
    <label>Affinipay</label>
</RecordType>