unpackaged/main/default/objects/Contract__c/recordTypes/LawPay.recordType-meta.xml
<RecordType>
    <fullName>LawPay</fullName>
    <active>true</active>
    <description>includes LawPay Payments and LawPay Software</description>
    <label>LawPay</label>
</RecordType>