unpackaged/main/default/objects/Contract__c/recordTypes/MyCase_Payments.recordType-meta.xml
<RecordType>
    <fullName>MyCase_Payments</fullName>
    <active>true</active>
    <description>Legacy MyCase Payments only</description>
    <label>MyCase Payments</label>
</RecordType>