unpackaged/main/default/objects/Contract__c/recordTypes/Websites.recordType-meta.xml
<RecordType>
    <fullName>Websites</fullName>
    <active>true</active>
    <description>For use with Website Hosting products and services</description>
    <label>Websites</label>
</RecordType>