unpackaged/main/default/objects/Contract__c/listViews/All_Software_Subscription_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Software_Subscription_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Subscription_Start_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.CASEpeer,Contract__c.Docketwise,Contract__c.MyCase,Contract__c.Soluno,Contract__c.Websites,Contract__c.Woodpecker</value>
    </filters>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>All Software Subscription Contracts</label>
</ListView>