unpackaged/main/default/objects/Contract__c/listViews/All_Soluno_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Soluno_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Subscription_Start_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.Soluno</value>
    </filters>
    <label>All Soluno Contracts</label>
</ListView>